Bug 115858 - formatting toolbar: on the styles list, more button should move the focus on "styles" window
Summary: formatting toolbar: on the styles list, more button should move the focus on ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2018-02-19 15:45 UTC by Alex ARNAUD
Modified: 2019-06-17 08:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex ARNAUD 2018-02-19 15:45:06 UTC
Description:
Hello all,

Since LibreOffice 5, the style and formatting dialog has been dropped and replaced by the one shipped on the sidebar. Since that, the "more styles" item (after I press ctrl-f11) but this opening does not catch the caret which stays inside the document windows instead of the new-opened "style and formatting".

This current implementation makes keyboard users confused because they expect to see their cursor moved to the full "styles and formatting" list on a floating window Whereas just now, they have to guess that the sidebar has been opened and try reaching to it via keyboard, that is a not possible action.

Opening the style and formatting sidebar pane seems also not the behavior expected by sidebar users. Sidebar users will use the style pane available on the "properties" tab because it already offers the styles list. Users who do not want to use the sidebar at all don't expect to see sidebar opened on a non sidebar element.

I assume the implementation I propose should satisfy the majority because sidebar users could continue to use the sidebar and people who don't want to use it will be able to avoid it.

Steps to Reproduce:
1. Open LibreOffice Writer
2. Press ctrl+F11 or click on the drop-down styles list from the formatting bar
3. Choose more styles

Actual Results:  
The keyboard focus comes back to the document contents

Expected Results:
The keyboard focus should move to a new floating windows "styles and formatting" as it is the case on LibreOffice 4.2 or with navigator (pressing F5).


Reproducible: Always


User Profile Reset: No



Additional Info:
Best regards.


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Samuel Thibault 2018-02-26 16:04:02 UTC
Indeed, when typing control-f11 and then choosing "more styles" in the list, the style sidebar opens, but the keyboard focus doesn't go there. Either a new floating window should appear with the caret in it, or the style sidebar should appear (current behavior) and the caret put in it (missing behavior).
Comment 2 QA Administrators 2019-06-03 02:49:48 UTC Comment hidden (obsolete)
Comment 3 Samuel Thibault 2019-06-11 16:13:15 UTC
This is still an issue with

Version: 6.3.0.0.alpha1+
Build ID: b26b6cab5d8147d35f76a21c333719c80840d08d
Threads CPU : 8; OS : Linux 5.1; UI Render : par défaut; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-05-20_23:15:15
Locale : fr-FR (fr_FR.UTF-8); Langue IHM : fr-FR
Calc: threaded

and, as mentioned in the original report, is a regression compared to libreoffice 5.
Comment 4 Commit Notification 2019-06-12 15:34:55 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a025132839b19ba952558b9dbec454c8a34c6489%5E%21

Resolves tdf#115858: More button should move the focus to 'Styles' window

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2019-06-13 05:36:05 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/9dbaac23a1596358ceb84c92ba0357b332e9d76d%5E%21

Resolves tdf#115858: More button should move the focus to 'Styles' window

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Samuel Thibault 2019-06-17 08:40:53 UTC
I could confirm that it is fixed in the daily build from https://dev-builds.libreoffice.org/daily/master/Linux-rpm_deb-x86_64@86-TDF/2019-06-15_11.49.26/

Thanks!