Resolves tdf#115858: More button should move the focus to 'Styles' window

Change-Id: I71c834733ff0f3d4b89ecaeecb12631609e84c1d
Reviewed-on: https://gerrit.libreoffice.org/73872
Tested-by: Jenkins
Reviewed-by: Muhammet Kara <muhammet.kara@collabora.com>